@@ -100,3 +100,4 @@
 ( cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/notification_foldercheck.c;  ) > 0.16cvs3.patchset
 ( cvs diff -u -r 1.1.2.129 -r 1.1.2.130 configure.ac;  cvs diff -u -r 1.1.2.29 -r 1.1.2.30 src/notification_plugin.c;  ) > 0.16cvs4.patchset
 ( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/notification_foldercheck.c;  ) > 0.16cvs5.patchset
+( cvs diff -u -r 1.1.2.27 -r 1.1.2.28 src/notification_prefs.c;  ) > 0.16cvs6.patchset
