@@ -9,7 +9,7 @@ dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=16
 MICRO_VERSION=0
-EXTRA_VERSION=5
+EXTRA_VERSION=6
 
 CFLAGS="$CFLAGS -Wall"
 
